--- a/ProgressbarWithSignalR/ProgressbarWithSignalR.csproj
+++ b/ProgressbarWithSignalR/ProgressbarWithSignalR.csproj
@@ -149,6 +149,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalR\Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
