--- a/ProgressbarWithSignalR/ProgressbarWithSignalR.csproj
+++ b/ProgressbarWithSignalR/ProgressbarWithSignalR.csproj
@@ -165,6 +165,7 @@
     </Compile>
     <Compile Include="Models\Hospital.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalR\ProgressHub.cs" />
     <Compile Include="SignalR\Startup.cs" />
   </ItemGroup>
   <ItemGroup>
