--- a/ProgressbarWithSignalR/packages.config
+++ b/ProgressbarWithSignalR/packages.config
@@ -17,7 +17,8 @@
   <package id="Microsoft.AspNet.Web.Optimization.zh-Hant" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.zh-Hant" version="3.2.4" targetFramework="net461" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net461" />
